Added Authorization class, RedisService class.
